--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@google/generative-ai": "^0.24.1",
     "@tailwindcss/postcss": "^4.1.18",
     "autoprefixer": "^10.4.24",
+    "dotenv": "^17.2.4",
     "lucide-react": "^0.563.0",
     "postcss": "^8.5.6",
     "react": "^19.2.4",
